adapt OpenAPI, fix JSON parsing
