# api/openapi.yaml
@@ -5,27 +5,30 @@ info:
   version: 1.0.0
 
 servers:
-  - url: "http://srv-captain--filmkritiken-backend"
+  - url: "https://filmkritiken-backend.marsrover.418-teapot.de"
+  - url: "http://localhost:8080"
 
 paths:
-  /filmkritiken:
+  /api/filmkritiken:
     get:
-      description: abc
-      #      parameters:
-      #        - in: query
-      #          name: limit
-      #          required: false
-      #          schema:
-      #            type: integer
-      #            minimum: 1
-      #            maximum: 50
-      #            default: 10
-      #        - in: query
-      #          name: offset
-      #          required: false
-      #          schema:
-      #            type: integer
-      #            minimum: 0
+      description: Retrieves all Filmkritiken as a List
+      tags:
+        - Filmkritiken
+      parameters:
+        - in: query
+          name: limit
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 50
+            default: 10
+        - in: query
+          name: offset
+          required: false
+          schema:
+            type: integer
+            minimum: 0
       responses:
         "200":
           description: OK
@@ -35,6 +38,13 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Filmkritiken"
+        "500":
+          description: Internal Error
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Could not get Filmkritiken from DB
 
 components:
   schemas:
